kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-iasc-back
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-iasc-back
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: tp-iasc-back
    spec:
      containers:
        - name: tp-iasc-back
          image: nicocollazo/tp-iasc-back
          ports:
            - containerPort: 8080
            - containerPort: 8081
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-iasc-front
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-iasc-front
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: tp-iasc-front
    spec:
      containers:
        - name: tp-iasc-front
          image: nicocollazo/tp-iasc-front
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-iasc-state-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-iasc-state-manager
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: tp-iasc-state-manager
    spec:
      containers:
        - name: tp-iasc-state-manager
          image: nicocollazo/tp-iasc-state-manager
          ports:
            - containerPort: 8090
          imagePullPolicy: Always
