kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: tp-iasc-state-manager
  labels:
    app: tp-iasc-state-manager
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: tp-iasc-state-manager
  ports:
    - name: http
      port: 8090
      targetPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: tp-iasc-back
  labels:
    app: tp-iasc-back
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: tp-iasc-back
  ports:
    - name: api
      port: 8080
      targetPort: 8080
    - name: socket
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tp-iasc-front
  labels:
    app: tp-iasc-front
    tier: frontend
spec:
  type: NodePort
  selector:
    app: tp-iasc-front
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 31245
