kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp-iasc-back
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "auth_token"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/*
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port: 
              number: 8080
      - path: /socket.io/*
        pathType: Prefix
        backend:
          service:
            name: socket-svc
            port: 
              number: 8081
